--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
 
+		<!-- загрузка скрипта из внешнего файла -->
+		<script type="text/javascript" src="js/script.js"></script>
+
 		<title>Электромобили</title>
 
 	</head>
